force-app/main/default/objects/History_Field_Configuration__c/History_Field_Configuration__c.object-meta.xml
<CustomObject>
    <label>History Field Configuration</label>
    <nameField>
        <displayFormat>HF-{0}</displayFormat>
        <label>History Field Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Field Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>