force-app/main/default/objects/History_Field_Configuration__c/fields/API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Field_Name__c</fullName>
    <label>API Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>