force-app/main/default/objects/History_Field_Configuration__c/fields/Tracked_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Record_Types__c</fullName>
    <label>Tracked Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>